# agent-serving_ChatDev

./: .gitignore  pyproject.toml  run.py  test.ipynb
camel/: model_backend.py  typing.py  utils.py
camel/agents/: chat_agent.py
chatdev/: chat_chain.py  phase.py  utils.py
config/vllm_models/: Qwen-Qwen2.5-7B-Instruct-1M-no-reasoning.yaml  Qwen-Qwen3-14B-no-reasoning.yaml  Qwen-Qwen3-14B-reasoning.yaml  Qwen-Qwen3-32B-reasoning.yaml  Qwen-Qwen3-8B-no-reasoning.yaml  Qwen-Qwen3-8B-reasoning.yaml
scripts/: draw_usage_info.py  parse_usage_info.py  parse_usage_info.sh  plot_usage_info.py  run_and_plot_examples.sh  run_examples.py
