[project]
name = "chatdev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "easydict>=1.13",
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "importlib-metadata>=8.7.0",
    "markdown>=3.8",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "virtualenv>=20.31.2",
    "vllm>=0.9.0.1",
    "werkzeug>=3.1.3",
    "wikipedia-api>=0.8.1",
]
